--- a/src/app/complaint/complaint.component.html
+++ b/src/app/complaint/complaint.component.html
@@ -123,12 +123,12 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li *ngIf="(_user.role.rolename !== 'Adminstrator')" class="nav-item" role="presentation">
+                                    <li class="nav-item" role="presentation" id="propertyNotesTab">
                                         <a class="nav-link" data-bs-toggle="tab" href="#primaryNotes" role="tab" aria-selected="false" tabindex="-1">
                                             <div class="d-flex align-items-center">
-                                                <div class="tab-icon"><i class="bx bx-home font-18 me-1"></i>
+                                                <div class="tab-icon"><i class="bx bx-file font-18 me-1"></i>
                                                 </div>
-                                                <div class="tab-title">Notes</div>
+                                                <div class="tab-title">Property Notes</div>
                                             </div>
                                         </a>
                                     </li>
@@ -576,9 +576,7 @@
                                     <div class="tab-pane fade" id="primaryNotes" role="tabpanel">
                                         <div class="col-lg-12 col-sm-12 mt-3">
                                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                                <label for="input1" class="form-label">Table</label>
-                                                
-                                                <button class="btn-primary" id="addNewButton" data-bs-toggle="modal" data-bs-target="#addNewModal">
+                                                <button class="btn-primary" id="addNewButton" data-bs-toggle="modal" data-bs-target="#addNewModal" *ngIf="isCase">
                                                     <i class="bx bx-plus me-1"></i> Add New
                                                 </button>
                                             </div>
@@ -2139,6 +2137,36 @@
                                                                     <div class="image-row pt-3">
                                                                         <div class="image-set">
                                                                             <div class="row">
+                                                                                <div class="col-md-2" *ngFor="let _caf of pictures">
+                                                                                    <!-- Lightbox2 integration -->
+                                                                                    <a class="gallery-image-thumb-link"
+                                                                                       id="imageViewer"
+                                                                                       href="{{getImageURL(_caf)}}"
+                                                                                       data-lightbox="gallery"
+                                                                                       data-title="{{_caf?.description}}">
+                                                                                        <img class="gallery-image-thumb"
+                                                                                             src="{{getImageURL(_caf)}}"
+                                                                                             alt="{{_caf?.description}}">
+                                                                                    </a>
+                                                                                    <div class="row">
+                                                                                        <div class="col-md-12">
+                                                                                            <!-- Edit and Delete actions -->
+                                                                                            <a class="cursor-pointer" (click)="editPicture(_caf)">
+                                                                                                <i class="bx bxs-comment-edit float-start cursor-pointer font-18" style="color:#008cff"></i>
+                                                                                            </a>
+                                                                                            <a class="cursor-pointer">
+                                                                                                <i class="bx bx-trash float-end font-18" style="color:red"></i>
+                                                                                            </a>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                    
+                                                                    <!-- <div class="image-row pt-3">
+                                                                        <div class="image-set">
+                                                                            <div class="row">
                                                                                 <div class="col-md-1"
                                                                                     *ngFor="let _caf of pictures">
 
@@ -2165,7 +2193,7 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
-                                                                    </div>
+                                                                    </div> -->
                                                                     <!-- <a class="image-gallery-link"
                                                                         href="assets/images/gallery/23.png"
                                                                         data-lightbox="example-1"><img
@@ -2711,7 +2739,7 @@
                 <h5 class="modal-title">
                     Reason (Due Date Change)
                 </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" (click)="closeReason('dueDate')" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <label for="comments" class="mt-2">Reason</label>
@@ -3259,7 +3287,7 @@
                 <h5 class="modal-title">
                     Reason (CU Date Change)
                 </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" (click)="closeReason('cuDate')" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <label for="comments" class="mt-2">Reason</label>
@@ -3299,7 +3327,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="addNewModalLabel">Add New Entry</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" (click)="closeReason('notes')" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <!-- Modal Content -->
@@ -3320,7 +3348,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" (click)="closeReason('notes')">Close</button>
                 <button type="button" class="btn btn-primary" id="saveButton" (click)="saveNotes()">Save</button>
             </div>
         </div>
