--- a/src/app/complaint/complaint.component.html
+++ b/src/app/complaint/complaint.component.html
@@ -1170,8 +1170,23 @@
 
                                 <div class="row">
                                     <div class="col-lg-12  col-sm-12">
-                                        <span id="cuDateComments">
-                                        </span>
+                                        <!-- <span id="cuDateComments">
+                                        </span> -->
+                                        <h5>Reason</h5>
+                                        <table id="tblreason"
+                                                class="table table-striped table-bordered datatable"
+                                                style="width:100%;">
+                                                <thead>
+                                                    <tr>
+                                                        <th>ID</th>
+                                                        <th>Reason</th>
+                                                        <th>Created On</th>
+                                                        <th>Created By</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                </tbody>
+                                            </table>
                                     </div>
                                 </div>
                             </div>
@@ -2140,13 +2155,14 @@
                                                                                 <div class="col-md-2" *ngFor="let _caf of pictures">
                                                                                     <!-- Lightbox2 integration -->
                                                                                     <a class="gallery-image-thumb-link"
-                                                                                       id="imageViewer"
-                                                                                       href="{{getImageURL(_caf)}}"
-                                                                                       data-lightbox="gallery"
-                                                                                       data-title="{{_caf?.description}}">
+                                                                                        id="imageViewer"
+                                                                                        href="{{getImageURL(_caf)}}"
+                                                                                        data-fancybox="gallery"
+                                                                                        [attr.data-caption]="_caf?.description"
+                                                                                        data-options='{"modal": true}'>
                                                                                         <img class="gallery-image-thumb"
-                                                                                             src="{{getImageURL(_caf)}}"
-                                                                                             alt="{{_caf?.description}}">
+                                                                                            src="{{getImageURL(_caf)}}"
+                                                                                            alt="{{_caf?.description}}">
                                                                                     </a>
                                                                                     <div class="row">
                                                                                         <div class="col-md-12">
@@ -2154,7 +2170,7 @@
                                                                                             <a class="cursor-pointer" (click)="editPicture(_caf)">
                                                                                                 <i class="bx bxs-comment-edit float-start cursor-pointer font-18" style="color:#008cff"></i>
                                                                                             </a>
-                                                                                            <a class="cursor-pointer">
+                                                                                            <a class="cursor-pointer" (click)="deletePicture(_caf)">
                                                                                                 <i class="bx bx-trash float-end font-18" style="color:red"></i>
                                                                                             </a>
                                                                                         </div>
@@ -2808,7 +2824,7 @@
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Address Search Result</h5>
+                <h5 class="modal-title">Address Search Result - 11111</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -2833,7 +2849,7 @@
                             <td>{{_asr?.state}}</td>
                             <td>{{_asr?.zip}}</td>
                             <td><a class="btn custom-btn mb-3 mb-lg-0 btn-sm" (click)="selectAddress(_asr)"
-                                    id="btnSaveAll">Select</a>&nbsp;<a class="btn custom-btn btn-sm mb-3 mb-lg-0"
+                                    id="btnSaveAll">Sele</a>&nbsp;<a class="btn custom-btn btn-sm mb-3 mb-lg-0"
                                     (click)="viewAddress(_asr)" id="btnSaveAll">View</a></td>
                         </tr>
                     </tbody>
