--- a/src/app/memberlogout/memberlogout.component.html
+++ b/src/app/memberlogout/memberlogout.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
     <img src="https://codeenforcementapp.web.app/assets/images/SJ_color_logo.png" style="width: 700px;" alt="Logo" />
-    <div style="margin-top: 100px;">
-        <button class="btn btn-primary" style="width: 150px;" (click)="login()">Sign In</button>
-        <!-- <a [routerLink]="['profile-data']" *ngIf="loginDisplay" class="mt-3">Continue with Logged In User</a> -->
+    <div class="d-flex flex-column justify-content-center align-items-center mt-5">
+        <button class="btn btn-primary mb-3" style="width: 150px;" (click)="login()">Sign In</button>
+        <div *ngIf="_userEmail">
+            <p class="text-center">{{_userEmail}} does not have access to this Page</p>
+        </div>
     </div>
 </div>
